<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#004D40"
    tools:context="superunitconverter.nexmii.com.superunitconverter.MainActivity">

    <TextView
        android:id="@+id/chooseCat"
        android:text="@string/TitleMain"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="@dimen/categoryTitle_size"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/tempyButton"
        android:text="@string/tempButton"
        android:background="@drawable/round_corners_btns"
        android:textSize="@dimen/mainbuttonsTextSize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:textColor="#4c4242"
        android:layout_width="280dp"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/disyButton"
        android:text="@string/disButton"
        android:background="@drawable/round_corners_btns"
        android:textSize="@dimen/mainbuttonsTextSize"
        android:layout_below="@id/tempyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#4c4242"
        android:layout_width="280dp"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/weButton"
        android:text="@string/weButton"
        android:background="@drawable/round_corners_btns"
        android:textSize="@dimen/mainbuttonsTextSize"
        android:layout_below="@id/disyButton"
        android:textColor="#4c4242"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_width="280dp"
        android:layout_height="70dp" />

</RelativeLayout>
