<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_g_and_oz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#004D40"
    tools:context="superunitconverter.nexmii.com.superunitconverter.gAndOzActivity">

    <TextView
        android:id="@+id/result4ID"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:layout_below="@+id/grams"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/we2EditText"
        android:layout_marginTop="130dp"
        android:maxLines="1"
        android:maxLength="17"
        android:digits="1234567890."
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:hint="@string/EditTextweHint"
        android:textColorHint="#ffffff"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/grams"
        android:text="@string/grams"
        android:textSize="48sp"
        android:background="@drawable/round_corners_btns"
        android:layout_marginLeft="14dp"
        android:textColor="#4c4242"
        android:layout_marginStart="14dp"
        android:layout_alignTop="@+id/ounces"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/we2EditText"
        android:layout_alignStart="@+id/we2EditText" />

    <Button
        android:id="@+id/ounces"
        android:text="@string/ounces"
        android:textSize="50sp"
        android:textColor="#4c4242"
        android:textAllCaps="false"
        android:background="@drawable/round_corners_btns"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/we2EditText"
        android:layout_marginTop="55dp"
        android:layout_alignRight="@+id/we2EditText"
        android:layout_alignEnd="@+id/we2EditText" />

    <Button
        android:id="@+id/halp"
        android:text="@string/halp"
        android:background="#004D40"
        android:textColor="#ffffff"
        android:textSize="@dimen/mainbuttonsTextSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="30dp"
        android:layout_height="wrap_content" />


</RelativeLayout>
