<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kg_and_lbs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#004D40"
    tools:context="superunitconverter.nexmii.com.superunitconverter.kgAndLbsActivity">

    <EditText
        android:id="@+id/weEditText"
        android:layout_marginTop="130dp"
        android:maxLines="1"
        android:maxLength="17"
        android:digits="1234567890."
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:layout_centerHorizontal="true"
        android:hint="@string/EditTextweHint"
        android:textColorHint="#ffffff"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight" />

    <Button
        android:id="@+id/Kilograms"
        android:layout_below="@+id/weEditText"
        android:layout_marginTop="55dp"
        android:text="@string/Kilograms"
        android:textColor="#4c4242"
        android:textSize="48sp"
        android:background="@drawable/round_corners_btns"
        android:layout_alignLeft="@+id/weEditText"
        android:layout_alignStart="@+id/weEditText"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result3ID"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_below="@+id/Kilograms"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Pounds"
        android:text="@string/Pounds"
        android:textSize="50sp"
        android:textAllCaps="false"
        android:background="@drawable/round_corners_btns"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#4c4242"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result3ID"
        android:layout_alignRight="@+id/weEditText"
        android:layout_alignEnd="@+id/weEditText" />

    <Button
        android:id="@+id/halp"
        android:text="@string/halp"
        android:background="#004D40"
        android:textColor="#ffffff"
        android:textSize="@dimen/mainbuttonsTextSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="30dp"
        android:layout_height="wrap_content" />

</RelativeLayout>
